feat: region api + adjust routes
