# src/server.ts
@@ -1,6 +1,9 @@
 import express from "express";
 import cors from "cors";
-import router from "./routes/api";
+import AuthRouter from "./routes/auth.routes";
+import MediaRouter from "./routes/media.routes";
+import CategoryRouter from "./routes/category.routes";
+import RegionsRouter from "./routes/region.routes";
 import connectDB from "./repository/db";
 import { env } from "./utils/env";
 import docs from "./docs/route";
@@ -15,7 +18,10 @@ app.get("/", (req, res) => {
   res.status(200).json({ message: "Server is running", data: null });
 });
 
-app.use("/api", router);
+app.use("/api/auth", AuthRouter);
+app.use("/api/media", MediaRouter);
+app.use("/api/category", CategoryRouter);
+app.use("/api/regions", RegionsRouter);
 docs(app);
 
 async function init() {
